--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body{
 
   .lightapp{
    width: 100%;
-   height: 80vh;
+   height: 80px;
+   margin-top: 100px;
+   margin-left: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
