--- a/Bulb/style.css
+++ b/Bulb/style.css
@@ -1,5 +1,7 @@
 *{ margin: 0; padding:0; font-family: 'Josefin Sans', sans-serif;}
 
+
+
 body{
   background-color: lightyellow;
 }
@@ -12,6 +14,8 @@ body{
   .lightapp{
    width: 100%;
    height: 80px;
+   margin-top: 100px;
+   margin-left: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
